fix basic alignment issue with html textbook display

--- a/lms/static/sass/course/_textbook.scss
+++ b/lms/static/sass/course/_textbook.scss
@@ -158,6 +158,10 @@ div.book-wrapper {
       img {
         max-width: 100%;
       }
+
+      div {
+        text-align: left;
+      }
     }
   }
 
